# Weather_bachelor

./: .dockerignore  .env.example  .gitignore  BACKEND_ARCHITECTURE.md  CLAUDE.md  Dockerfile  FRONTEND_VISUALIZATION_PLAN.md  RAILWAY.md  README.md  REQUIREMENTS.md  SeaBreeze_v5_point_analog.ipynb  THESIS_DATA_SOURCE_UPGRADE_PLAN.md  WEBAPP_IMPLEMENTATION_PLAN.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_tables.py  002_valid_time_local_naive.py  003_analysis_run_params.py  004_analysis_run_mode_sources.py  005_weather_record_forecast_metadata.py  006_era5_feature_library_tables.py  007_forecast_composite_column.py  008_weather_stations_observations.py  009_validation_runs_table.py
backend/app/: config.py  main.py
backend/app/middleware/: basic_auth.py
backend/app/models/: __init__.py  analog_result.py  analysis_run.py  daily_feature.py  library_build_job.py  location.py  observation.py  source_bias_correction.py  validation_run.py  weather_record.py  weather_station.py
backend/app/routers/: analysis.py  classification.py  library.py  locations.py  observations.py  validation.py  weather.py
backend/app/schemas/: analog.py  features.py  location.py  weather.py  (+2 more)
backend/tests/: conftest.py  test_analog_service.py  test_classification_service.py  test_feature_service.py  test_forecast_service.py  test_gfs_hindcast_provider.py  test_library_service.py  test_location_schema.py  test_open_meteo_provider.py  test_weather_schema.py  test_weather_service.py
(+32 files in other folders)
