[project]
name = "seabreeze-backend"
version = "0.1.0"
description = "Sea Breeze Analog — backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic-settings>=2.6",
    "psycopg[binary]>=3.2",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "httpx>=0.27",
    "numpy>=1.26",
    "xarray>=2024.1",
    "cfgrib>=0.9.12",
    "eccodes>=1.7",
    "h5netcdf>=1.3",
    "requests>=2.31",
    "cdsapi>=0.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["app*"]
